Verilator sim of wishbone data input and execution

--- a/fastInvSqrtFW/platformio.ini
+++ b/fastInvSqrtFW/platformio.ini
@@ -7,6 +7,8 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+;
+; GTKWave path: /home/alex/Documents/Dev/rvfpgaFastInvSqrt/fastInvSqrtFW/.pio/build/swervolf_nexys/trace.vcd
 
 [env:swervolf_nexys]
 platform = chipsalliance
